--- a/src/app.less
+++ b/src/app.less
@@ -1,3 +1,41 @@
+@col: 9;
+@row: 10;
+@grid-size: 57px;
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
 .app {
-  color: blue;
+  width: 100vw;
+  height: 100vh;
+  background: url('@/assets/images/background/floor.jpg');
+}
+.board {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 507px;
+  height: 567px;
+  margin: auto;
+  transform: scale(1.2);
+
+  &__background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url('@/assets/images/background/board.png');
+  }
+
+  &__grid {
+    position: relative;
+    top: -3px;
+    left: -4px;
+    display: grid;
+    grid-template-rows: repeat(10, @grid-size);
+    grid-template-columns: repeat(9, @grid-size);
+  }
 }
